chore: [PAGOPA-3066] Improve code & add javadoc to helpdesk api
