# openapi/openapi.json
@@ -39,6 +39,7 @@
       "get" : {
         "operationId" : "getBlobList",
         "parameters" : [ {
+          "description" : "Filter by year",
           "in" : "query",
           "name" : "year",
           "required" : false,
@@ -46,6 +47,7 @@
             "type" : "string"
           }
         }, {
+          "description" : "Filter by month, requires year otherwise gets ignored",
           "in" : "query",
           "name" : "month",
           "required" : false,
@@ -53,6 +55,7 @@
             "type" : "string"
           }
         }, {
+          "description" : "Filter by day, requires month otherwise gets ignored",
           "in" : "query",
           "name" : "day",
           "required" : false,
@@ -60,6 +63,7 @@
             "type" : "string"
           }
         }, {
+          "description" : "Filter by hours, requires day otherwise gets ignored",
           "in" : "query",
           "name" : "hour",
           "required" : false,
@@ -70,14 +74,7 @@
         "responses" : {
           "200" : {
             "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "type" : "string"
-                  }
-                }
-              }
+              "application/json" : { }
             },
             "description" : "OK",
             "headers" : {
@@ -88,8 +85,70 @@
                 }
               }
             }
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Bad Request",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "429" : {
+            "description" : "Too many requests",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Service unavailable",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
           }
         },
+        "security" : [ {
+          "JWT" : [ ]
+        } ],
+        "summary" : "Get list of failed messages saved on blob storage as JSON files",
         "tags" : [ "API Helpdesk" ]
       },
       "parameters" : [ {
@@ -105,6 +164,7 @@
       "get" : {
         "operationId" : "getJSONFromBlobStorage",
         "parameters" : [ {
+          "description" : "Filename of the failed message's JSON to retrieve",
           "in" : "query",
           "name" : "filename",
           "required" : true,
@@ -115,11 +175,7 @@
         "responses" : {
           "200" : {
             "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
+              "application/json" : { }
             },
             "description" : "OK",
             "headers" : {
@@ -130,8 +186,88 @@
                 }
               }
             }
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Bad Request",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "404" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Not found",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "429" : {
+            "description" : "Too many requests",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Service unavailable",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
           }
         },
+        "security" : [ {
+          "JWT" : [ ]
+        } ],
+        "summary" : "Retrieve the specified error message JSON by its filename",
         "tags" : [ "API Helpdesk" ]
       },
       "parameters" : [ {
@@ -155,6 +291,7 @@
       "post" : {
         "operationId" : "retryMessage",
         "parameters" : [ {
+          "description" : "Filename of the failed message's JSON to retry",
           "in" : "query",
           "name" : "filename",
           "required" : true,
@@ -165,11 +302,7 @@
         "responses" : {
           "200" : {
             "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
+              "application/json" : { }
             },
             "description" : "OK",
             "headers" : {
@@ -180,8 +313,88 @@
                 }
               }
             }
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Bad Request",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "404" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Not found",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "429" : {
+            "description" : "Too many requests",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            },
+            "description" : "Service unavailable",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
           }
         },
+        "security" : [ {
+          "JWT" : [ ]
+        } ],
+        "summary" : "Retry the specified error message JSON by its filename",
         "tags" : [ "API Helpdesk" ]
       }
     },
@@ -459,6 +672,28 @@
           },
           "version" : {
             "type" : "string"
+          }
+        }
+      },
+      "ProblemJson" : {
+        "type" : "object",
+        "properties" : {
+          "detail" : {
+            "type" : "string",
+            "description" : "A human readable explanation specific to this occurrence of the problem.",
+            "example" : "There was an error processing the request"
+          },
+          "status" : {
+            "maximum" : 600,
+            "minimum" : 100,
+            "type" : "integer",
+            "description" : "The HTTP status code generated by the origin server for this occurrence of the problem.",
+            "format" : "int32",
+            "example" : 200
+          },
+          "title" : {
+            "type" : "string",
+            "description" : "A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized); example: Service Unavailable"
           }
         }
       }
